Add count command; documentation

--- a/src/copy.1
+++ b/src/copy.1
@@ -14,7 +14,7 @@ To echo lines typed at your terminal:
 .PP
 .nf
 .RS
-copy
+$ \fBcopy\fP
 hello there, are you listening?
 \fIhello there, are you listening?\fP
 yes, I am.
