Some maintenance (documentation, arg parsing)

--- a/src/echo.1
+++ b/src/echo.1
@@ -34,5 +34,5 @@ $ \fBecho\fP hello world!
 .RE
 .fi
 .SH SEE ALSO
-There is a nice little story about \fIThe Unix and the Echo\fP
+The little story about \fIThe Unix and the Echo\fP
 by Doug McIlroy.
