--- a/src/translit.1
+++ b/src/translit.1
@@ -1,8 +1,11 @@
 .TH TRANSLIT 1 July\ 2019 local
+
 .SH NAME
 translit \- transliterate, squash, or delete characters
+
 .SH SYNOPSIS
 \fBtranslit\fP [-c] \fIsrc\fP [\fIdest\fP]
+
 .SH DESCRIPTION
 \fBtranslit\fP reads standard input, transliterates or deletes
 characters, and writes to standard output.
@@ -32,6 +35,7 @@ their usual interpretation.
 .PP
 The option \fB-c\fP builds the complement of \fIsrc\fP.
 The complement is always squashed (or deleted), never mapped to \fIdest\fP.
+
 .SH EXAMPLE
 Convert upper case to lower:
 .nf
@@ -59,3 +63,8 @@ This is a simple-minded test, i.e., a test of translit.
 \fIThis is a simple minded test i e a test of translit\fP
 .RE
 .fi
+
+.SH BUGS
+This program really transliterates bytes, not characters;
+for one-byte-per-character encodings (e.g. with ASCII)
+this makes no difference.
