Exercise 3-5 about compare f f (file f with itself)

--- a/man/compare.1
+++ b/man/compare.1
@@ -18,8 +18,8 @@ reports end of file on the shorter file.
 The option \fB-q\fP suppresses messages to standard output
 about differing lines (quiet mode).
 .PP
-Exit status is \fB0\fP if the files are identical,
-\fB1\fP if the files differ, and \fB2\fP if there are errors.
+Exit status is \fB0\fP if the files are identical, \fB1\fP
+if the files differ, and other values if there are errors.
 
 .SH EXAMPLE
 .nf
