--- a/man/edit.1
+++ b/man/edit.1
@@ -161,7 +161,8 @@ editor behaves as if its input began with the command \fBe\fP
 subsequent \fBe\fP, \fBf\fP, \fBr\fP, or \fBw\fP command can
 be written with no filename to refer to the remembered filename.
 A filename given with \fBe\fP or \fBf\fP replaces any remembered
-filename.
+filename. Use double quotes on the filename if it contains
+blanks or other unwieldy characters.
 
 .SH EXAMPLE
 Don't be silly.
