edit: signal handling, prompt on q if buffer dirty

--- a/man/edit.1
+++ b/man/edit.1
@@ -108,6 +108,9 @@ move text to after \fIline3\fP
 (.,.) \fBp\fP
 print text
 .TP
+\fBq\fP or \fBQ\fP
+quit (Q quits even if unsaved changes)
+.TP
 (.) \fBr\fP \fIfile\fP
 read \fIfile\fP, appending after line
 .TP
