Some consistency and minor changes

--- a/man/define.1
+++ b/man/define.1
@@ -4,7 +4,7 @@
 define \- expand string definitions
 
 .SH SYNOPSIS
-\fBdefine\fP [files]
+\fBdefine\fP
 
 .SH DESCRIPTION
 \fBdefine\fP reads its input, looking for macro definitions of the form
